@@ -35,7 +35,7 @@ import java.util.Set;
 
 import de.uni_kl.cs.disco.curves.ArrivalCurve;
 import de.uni_kl.cs.disco.curves.CurvePwAffineFactory;
-import de.uni_kl.cs.disco.curves.CurvePwAffineUtilsDispatch;
+import de.uni_kl.cs.disco.curves.CurvePwAffineUtils;
 import de.uni_kl.cs.disco.curves.ServiceCurve;
 import de.uni_kl.cs.disco.minplus.MinPlusDispatch;
 import de.uni_kl.cs.disco.misc.SetUtils;
@@ -125,11 +125,11 @@ public abstract class ArrivalBoundDispatch {
 			// * Consider all the permutations of different bounds per in link.
 			// * Care about the configuration.convolveAlternativeArrivalBounds()-flag later.
 			for (ArrivalCurve arrival_bound_link : arrival_bounds_link) {
-				CurvePwAffineUtilsDispatch.beautify(arrival_bound_link);
+				CurvePwAffineUtils.beautify(arrival_bound_link);
 
 				for (ArrivalCurve arrival_bound_exiting : arrival_bounds) {
 					arrival_bounds_link_permutations
-							.add(CurvePwAffineUtilsDispatch.add(arrival_bound_link, arrival_bound_exiting));
+							.add(CurvePwAffineUtils.add(arrival_bound_link, arrival_bound_exiting));
 				}
 			}
 
@@ -229,7 +229,7 @@ public abstract class ArrivalBoundDispatch {
 
 		for (ArrivalCurve alpha_1 : arrival_curves_1) {
 			for (ArrivalCurve alpha_2 : arrival_curves_2) {
-				arrival_bounds_merged.add(CurvePwAffineUtilsDispatch.add(alpha_1, alpha_2));
+				arrival_bounds_merged.add(CurvePwAffineUtils.add(alpha_1, alpha_2));
 			}
 		}
 
